--- a/code/style.css
+++ b/code/style.css
@@ -3,29 +3,16 @@ html {
   color: #000;
 }
 
-li a {
-  text-decoration: none;
-  color: #000;
-  font-family: 'Times New Roman', Times, serif
+main {
+  width: 100vw;
 }
 
-/* MOBILE FIRST */
 /* TOP NAVIGATION MOBILE */
-
-/* IF SCREEN SIZE IS MORE THAN 768PX WIDE  - TABLET */
-@media only screen and (max-width: 760px),
-(min-device-width: 768px) and (max-device-width: 1024px) {
-}
-
-  /* IF SCREEN SIZE IS MORE THAN 1024PX WIDE - DESKTOP */
-@media screen and (min-width: 1024px) {
-
-/* TOP NAVIGATION DESKTOP */
-header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 35px;
+  margin: 10px 40px;
 }
 
 .logo {
@@ -34,27 +21,89 @@ header {
   cursor: pointer;
 }
 
-.nav-links {
-  list-style: none;
+.navigation-container {
+  display: none;
 }
 
-.nav-links li {
-  display: inline-block;
-  padding: 0px 18px;
+/* BIG NEWS MOBILE */
+.big-news-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 10px;
+  padding: 0px 40px;
 }
 
-.nav-links li a {
-  color: #000
+.big-news-img img {
+  width: 300px;
+  height: 350px;
 }
 
-.nav-links li a:hover {
-  color: pink
+.big-news-text h1 {
+  margin-top: 20px;
+  font-size: 36px;
+}
+
+.big-news-text p {
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.button {
+  background-color: #fff;
+  border: solid black;
+  padding: 10px 20px;
+  text-align: center;
+  margin-top: 30px;
+  cursor: pointer;
+}
+
+/* RECENT NEWS MOBILE */
+.recent-news-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  padding: 0px 40px;
+}
+
+.recent-news-heading {
+  margin: 17px;
+}
+
+.recent-news-heading h1 {
+  font-size: 48px;
+}
+
+.news-card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.news-card {
+  margin: 17px;
+}
+
+.news-card img {
+  width: 220px;
+  height: 250px;
+}
+
+/* IF SCREEN SIZE IS MORE THAN 1024PX WIDE - DESKTOP */
+@media screen and (min-width: 1024px) {
+
+/* TOP NAVIGATION DESKTOP */
+.navigation-container {
+  display: flex;
+}
+
+.nav-item {
+  margin: 0px 18px;
 }
 
 /* BIG NEWS DESKTOP */
 .big-news-container {
-  display: flex;
-  justify-content: center;
+  flex-direction: row;
   align-items: stretch;
   margin-top: 100px;
 }
@@ -79,19 +128,8 @@ header {
   line-height: 25px;
 }
 
-button {
-  background-color: #fff;
-  border: solid black;
-  padding: 10px 20px;
-  text-align: center;
-  margin-top: 30px;
-  cursor: pointer;
-}
-
 /* RECENT NEWS DESKTOP */
 .recent-news-container {
-  display: flex;
-  justify-content: center;
   margin-top: 100px;
 }
 
@@ -99,20 +137,8 @@ button {
   margin: 17px;
 }
 
-.recent-news-heading h1 {
-  font-size: 48px;
-}
-
 .news-card-container {
-  display: flex;
+  flex-direction: row;
 }
 
-.news-card {
-  margin: 17px;
-}
-
-.news-card img {
-  width: 220px;
-  height: 250px;
-}
 }
