--- a/code/style.css
+++ b/code/style.css
@@ -48,6 +48,9 @@ a {
   color: #000;
   margin: 0 0 0 20px;
 }
+a:hover {
+  color: #0000009d;
+}
 
 /************ BIG NEWS ************/
 
@@ -56,7 +59,6 @@ a {
   max-width: 1600px;
   display: grid;
   grid-template-rows: repeat(2, 1fr);
-  grid-gap: 10px;
   border-bottom: 6px double #3a3c3f;
   padding-bottom: 10px;
 }
@@ -64,23 +66,29 @@ a {
   width: 100%;
   background-color: #fff;
   border: 1px solid #3a3c3f;
+  border-bottom: none;
   border-radius: 10px;
-  padding: 5px;
-  box-shadow: 5px 5px 5px #3a3c3f;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   box-sizing: border-box;
 }
 .big-news-text {
   background-color: #fff;
   width: 100%;
   border: 1px solid #3a3c3f;
+  border-top: none;
   border-radius: 10px;
-  padding: 10px 5px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  padding: 20px;
   box-sizing: border-box;
 }
 h2 {
-  margin: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #000;
+  margin: 0;
 }
-article {
+h3 {
   margin: 10px;
 }
 article p:nth-child(2) {
@@ -107,9 +115,6 @@ article p:nth-child(2) {
   padding: 5px;
   margin: 10px;
   box-shadow: 5px 5px 5px #3a3c3f;
-}
-h3 {
-  margin: 10px;
 }
 .small-news div:hover {
   box-shadow: 5px 5px 20px #3a3c3f;
@@ -153,6 +158,21 @@ footer a {
   .big-news {
     grid-template-rows: none;
     grid-template-columns: repeat(2, 1fr);
+  }
+  .big-news img {
+    border-bottom: 1px solid #3a3c3f;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-right: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+  .big-news-text {
+    border-top: 1px solid #3a3c3f;
+    border-top-right-radius: 10px;
+    border-left: none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
   }
 }
 @media (min-width: 1024px) {
