--- a/code/style.css
+++ b/code/style.css
@@ -104,13 +104,13 @@ img.small-news {
   width: 500px;
 }
 
-/*Styling for tablet*/
-@media (min-width:668px) and (max-width: 1024px) {
+/*Styling for tablet and small desktop*/
+@media (min-width:768px) and (max-width: 1200px) {
 
 }
 
-/*Styling for desktop*/
-@media (min-width: 1025px) {
+/*Styling for big desktop*/
+@media (min-width: 1200px) {
 
 }
 
