--- a/code/style.css
+++ b/code/style.css
@@ -3,11 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 body {
-    background-color: #ebe3e3;
-    color: #272525;
-    font-family: 'Montserrat', sans-serif;
     margin: 0;
-    /*display: flex; /*början på flexbox*/
+    font-family: 'Montserrat', sans-serif;
 }
 
 h1{
@@ -32,44 +29,53 @@ h4 {
 
 /*** HEADER ***/
 
-header{
-    background-color: #2c2929;
-    height: 80px;
+.header {
+    background: rgb(27, 27, 27);
+    color:rgb(238, 237, 234);
     display: flex;
-    align-items: center; /* items in middle of header (not middle of middle)*/
-    padding: 0 15px; /* on the left and right sides*/
-    
+    margin:0;
+    height: 70px;
+    align-items: center; /* i mitten av höjden items in container*/
+    padding: 0 15px; /*space på varje kort sida av header*/
+  
 }
 
-.menu-mobile { /*phone screen menu container square*/
+.mobile-hamburger {
     display: flex;
-    width: 30px;
-    height: 30px;
-    flex-direction: column; /* för på rad ner*/
-    justify-content: space-between;/* space between all lines*/
-    margin-right: 5px; /* space between menu and logo (here becaus of phone tablet not on logo so it will affect other screens)*/
+    width: 20px;
+    height: 20px;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-right: 5px;
 }
 
-.menu-mobile div{ /*phone screen menu lines square*/
-    width: 30px;
-    height: 3px;
-    background-color: #ebe3e3;
-    border-radius: 5px; /* round edges*/
+/*** hamburger menu lines ***/
+.mobile-hamburger div {
+    width: 25px;
+    height: 2px;
+    background: rgb(238, 237, 234);
 }
 
-header img {
-    width: 90px;
-    }
-
-nav { /*not displayed in phone screen*/
-  display: none;
+.logo {
+    width: 80px;
 }
 
-nav a {
-    color: #ebe3e3;
+.header h3 {
+    margin: 0 auto;
+    font-family: 'Pacifico', cursive;
+}
+
+/*** mobile-first so not to be displayed in mobile ***/
+.navigation {
+    display: none;
+}
+
+.navigation a {
     text-decoration: none;
-    margin: 0px 10px; /*to not mess with the right side of the margin*/
+    color: white;
+    margin: 0px 10px;
 }
+
 
 /*** BIG NEWS SECTION ***/
 .big-news-container .container {
@@ -126,21 +132,30 @@ nav a {
 
 /*** MEDIA QUERIES ***/
 
-@media (min-width: 650px){
-    header{
+@media (min-width: 767px){
+    .header{
         justify-content: space-between;/*space between content navbar*/
     }
 
-    nav{
+    .navigation {
         display: inline-block; /*navbar shown with inline-block (kolla upp)*/
     }
 
-    .menu-mobile{
+    .mobile-hamburger{
         display:none; /*mobile menu not shown*/
     }
 }
 
-@media (min-width: 900px){
+@media (min-width: 992px){
+    .navigation a {
+        transition: all 0.8s ease 0s;
+    }
+
+    .navigation a:hover {
+        color: rgb(231, 166, 231);
+        text-decoration: underline;
+    }
+
     .big-news-container .container {
         flex-direction: row;
         align-items: center;
