--- a/code/style.css
+++ b/code/style.css
@@ -3,11 +3,8 @@ html {
   color: #000;
 }
 
-main {
-  width: 100vw;
-}
-
 /* TOP NAVIGATION MOBILE */
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -26,6 +23,7 @@ main {
 }
 
 /* BIG NEWS MOBILE */
+
 .big-news-container {
   display: flex;
   flex-direction: column;
@@ -35,8 +33,8 @@ main {
 }
 
 .big-news-img img {
-  width: 300px;
-  height: 350px;
+  width: 100%;
+  height: 450px;
 }
 
 .big-news-text h1 {
@@ -59,19 +57,20 @@ main {
 }
 
 /* RECENT NEWS MOBILE */
+
 .recent-news-container {
   display: flex;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 50px;
   padding: 0px 40px;
 }
 
 .recent-news-heading {
-  margin: 17px;
+  margin: 17px 0px;
 }
 
 .recent-news-heading h1 {
-  font-size: 48px;
+  font-size: 36px;
 }
 
 .news-card-container {
@@ -81,64 +80,74 @@ main {
 }
 
 .news-card {
-  margin: 17px;
+  margin: 17px 0px;
 }
 
 .news-card img {
-  width: 220px;
-  height: 250px;
+  width: 100%;
+  height: 350px;
+}
+
+/* IF SCREEN SIZE IS MORE THAN 768PX WIDE - TABLET */
+
+@media screen and (min-width: 768px) {
+  /* TOP NAVIGATION TABLET AND DESKTOP */
+  .navigation-container {
+    display: flex;
+  }
+  .nav-item {
+    margin: 0px 18px;
+  }
+  /* BIG NEWS TABLET */
+  .big-news-container {
+    flex-direction: row;
+    margin-top: 100px;
+  }
+  .big-news-img {
+    width: 45%;
+  }
+  .big-news-img img {
+    width: 100%;
+    height: 500px;
+  }
+  .big-news-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: baseline;
+    width: 45%;
+    padding: 0px 50px;
+  }
+  .big-news-text h1 {
+    margin: 0px;
+    font-size: 48px;
+  }
+  .big-news-text p {
+    font-size: 18px;
+    line-height: 25px;
+  }
+  .button{
+    margin: 0px;
+  }
+   /* RECENT NEWS DESKTOP */
+   .recent-news-container {
+    margin-top: 100px;
+  }
+  .recent-news-heading {
+    margin: 17px 0px;
+  }
+  .news-card-container {
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .news-card {
+    width: 48%;
+    margin: 17px 0px;
+  }
 }
 
 /* IF SCREEN SIZE IS MORE THAN 1024PX WIDE - DESKTOP */
 @media screen and (min-width: 1024px) {
-
-/* TOP NAVIGATION DESKTOP */
-.navigation-container {
-  display: flex;
-}
-
-.nav-item {
-  margin: 0px 18px;
-}
-
-/* BIG NEWS DESKTOP */
-.big-news-container {
-  flex-direction: row;
-  align-items: stretch;
-  margin-top: 100px;
-}
-
-.big-news-img img {
-  width: 500px;
-  height: 500px;
-}
-
-.big-news-text {
-  width: 400px;
-  padding: 0px 50px;
-}
-
-.big-news-text h1 {
-  margin-top: 0px;
-  font-size: 48px;
-}
-
-.big-news-text p {
-  font-size: 18px;
-  line-height: 25px;
-}
-
-/* RECENT NEWS DESKTOP */
-.recent-news-container {
-  margin-top: 100px;
-}
-
-.recent-news-heading {
-  margin: 17px;
-}
-
-.news-card-container {
-  flex-direction: row;
-}
 
 }
