--- a/code/style.css
+++ b/code/style.css
@@ -20,6 +20,7 @@ display: flex;
 margin: 70px;
 padding:100px;
 flex-direction: column;
+
 }
 
 
@@ -74,11 +75,32 @@ justify-content: center;
 
 /* BIG NEWS */
 /* Skriver man båda, så gäller regeln för båda */
-h1,
-h2 {
-  font-family: helvetica;
+.big-news {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;  
+  border: 2px solid black;
+  align-items: flex-start;
+  padding:10px;
+  background: whitesmoke;
 
 }
+
+
+
+/*.big-news a {
+  border: 2px solid black;
+  display: flex;
+  background: whitesmoke;  
+  flex-flow: column wrap;
+
+}
+
+.big-news a:hover{
+
+  border: 4px solid black;
+
+}/*
 
 /*SMALL NEWS*/
 .small-news {
