--- a/code/style.css
+++ b/code/style.css
@@ -2,7 +2,7 @@ body {
   background-color: whitesmoke;
   color: #121212;
   Font-family: Helvetica;
-  Margin: 10px 0 0 0;
+  Margin: 0; 
 }
 
 h1 {
@@ -40,7 +40,6 @@ header {
   padding: 14px;
   border-bottom: 2px solid black;
   border-top: 2px solid black;
-  margin: 10px auto;
 } 
 
 .hamburger a {
@@ -113,7 +112,8 @@ nav a:active {
               0 16px 16px rgba(0,0,0,0.12);
   border-radius: 3px;
   width: 100%; /** So that the picture grows when you change screen size**/
-  /*max-width: 1100px;*/
+  max-width: 1400px;
+  margin: 0 auto; 
 }
 
 .big-news img {
@@ -137,21 +137,20 @@ nav a:active {
 
 .news-container { 
   display: flex;
-  flex-wrap: wrap; /**ADDED THIS**/
   flex-direction: column;
   align-items: center;
   text-align: center;
   background-color: whitesmoke;
-  box-sizing: border-box;
-  width: 100%;/*change place?*/
-  /*max-width: 1100px;*/
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 .news {
   display: flex;
   flex-basis: 90%;
   justify-content: center;
-  margin: 20px 20px auto; /**change place of this? Add margin bottom to news a?**/
+  margin: 20px; 
 }
 
 .news img {
@@ -163,7 +162,6 @@ nav a:active {
   background-color: white;
   color: black;
   text-decoration: none;
-  width: 100%;
   box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
               0 2px 2px rgba(0,0,0,0.12), 
               0 4px 4px rgba(0,0,0,0.12), 
@@ -195,7 +193,7 @@ footer {
   padding: 8px;
   border-bottom: 2px solid black;
   border-top: 2px solid black;
-  margin: 10px auto;
+  margin-top: 20%;
 }
 
 /***Styling the article pages ***/
@@ -213,7 +211,7 @@ footer {
               0 16px 16px rgba(0,0,0,0.12);
   border-radius: 3px;
   width: 90%;
-  max-width: 1100px; /** REMOVE THIS?**/
+  max-width: 1400px; 
   margin: 0 auto;
 }
 
@@ -239,7 +237,7 @@ footer {
   align-items: center;
   box-sizing:border-box;
   width: 40%;
-  max-width: 1100px; /** remove this? **/
+  max-width: 1400px; /** remove this? **/
   margin: 20px auto; 
 }
 
@@ -258,7 +256,7 @@ footer {
   align-items: center;
   box-sizing:border-box;
   width: 40%;
-  max-width: 1100px; /**Remove this?**/
+  max-width: 1400px; /**Remove this?**/
   margin: 20px auto; 
 }
 
