--- a/code/style.css
+++ b/code/style.css
@@ -59,27 +59,17 @@ a:hover {
   max-width: 1600px;
   display: grid;
   grid-template-rows: repeat(2, 1fr);
-  border-bottom: 6px double #3a3c3f;
-  padding-bottom: 10px;
+  border: 4px double #3a3c3f;
+  margin-bottom: 20px;
 }
 .big-news img {
   width: 100%;
   background-color: #fff;
-  border: 1px solid #3a3c3f;
-  border-bottom: none;
-  border-radius: 10px;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
   box-sizing: border-box;
 }
 .big-news-text {
-  background-color: #fff;
+  background-color: #ffffffb2;
   width: 100%;
-  border: 1px solid #3a3c3f;
-  border-top: none;
-  border-radius: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
   padding: 20px;
   box-sizing: border-box;
 }
@@ -94,31 +84,38 @@ h3 {
 article p:nth-child(2) {
   display: none;
 }
+.border {
+  width: 100%;
+  border-bottom: 6px double #3a3c3f9a;
+}
+
 /************ SMALL NEWS ************/
 
 .small-news {
   width: 95%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-rows: repeat(8, 1fr);
+  grid-gap: 20px;
+  justify-items: center;
+  margin: 20px 0;
 }
 .small-news img {
   width: 100%;
-  max-width: 300px;
   border-radius: 10px;
 }
 .small-news div {
-  background-color: #fff;
+  max-width: 300px;
+  background-color: #ffffffb2;
   border: 1px solid #3a3c3f;
   border-radius: 10px;
   padding: 5px;
-  margin: 10px;
-  box-shadow: 5px 5px 5px #3a3c3f;
+  box-shadow: 5px 5px 5px ;
+  box-sizing: border-box;
 }
 .small-news div:hover {
   box-shadow: 5px 5px 20px #3a3c3f;
 }
+
 /************ FOOTER ************/
 
 footer {
@@ -150,8 +147,9 @@ footer a {
     display: block;
   }
   .small-news {
-    flex-direction: row;
-    flex-wrap: wrap;
+    max-width: 620px;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 @media (min-width: 780px) {
@@ -159,24 +157,11 @@ footer a {
     grid-template-rows: none;
     grid-template-columns: repeat(2, 1fr);
   }
-  .big-news img {
-    border-bottom: 1px solid #3a3c3f;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-right: none;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-  .big-news-text {
-    border-top: 1px solid #3a3c3f;
-    border-top-right-radius: 10px;
-    border-left: none;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-  }
 }
 @media (min-width: 1024px) {
   .small-news {
-    width: 80%;
+    max-width: 1260px;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 }
