Har snyggat till lite css delen och lagt koder i rätt ordning

--- a/test.css
+++ b/test.css
@@ -2,7 +2,133 @@ body {
     background-color: #212529;
   }
   
-  .latest { /* gör den kanske gul elelr glittrig eller något */
+  
+  
+/*--- Flex container starts here ---*/
+
+  .flex-container {
+    border: 4px solid #FFE401;
+    background-color: #FFE401;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: 1200px;
+      margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .flex-child {
+    margin: 5px;
+    /*border: 2px solid; */
+    border-radius: 5px;
+    padding: 5px;
+    display: flex;
+  }
+  
+  
+  img {
+    width: 100px;
+    height: 100px;
+    align-items: flex-end;
+  }
+  
+  
+  /*--- Flex conainer -> Navbar starts here--- */
+  
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #FFE401;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #c9bb40;
+    border-radius: 25px;
+  }
+  
+    /*---Navbar ends here ---*/
+  
+  
+  /* --- Flex Container section ends here --*/
+
+
+
+
+
+
+/*--- Big News section starts here ---*/
+
+  .big-news {
+    border: 4px solid white;
+    border-bottom: 4px solid #212529;
+    height: 330px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white; 
+  }
+
+  .big-news a{
+    text-decoration: underline;
+    color: black;
+  }
+  
+  .inside-big {
+    margin: 5px;
+    /* border: 2px solid; */
+    border-radius: 5px;
+    padding: 5px;
+    width: 600px;
+    height: 300px;
+    display: flex;
+  }
+  
+  .inside-big img {
+    width: 510px;
+    height: 300px;
+    border-radius: 25px;
+    box-shadow: 10px 5px 5px  #212529;
+  }
+  
+  .pic {
+    width: 45%;
+  }
+  
+  .text1 {
+    width: 60%;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .text2 {
+    width: 60%;
+    align-items: center;
+    justify-content: center;
+  }
+
+/*--- Big News section ends here ---*/
+  
+
+/*--- Latest News section starts here ---*/
+
+.latest { /* gör den kanske gul elelr glittrig eller något */
     border: 4px solid white;
     border-bottom: 4px solid #212529;
     /*text-align: center; */
@@ -40,118 +166,10 @@ body {
   
   
   }
+
+/*--- Latest News section ends here ---*/
   
-  
-  
-  /*-----------Navbar------------ */
-  
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #FFE401;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover {
-    background-color: #c9bb40;
-    border-radius: 25px;
-  }
-  
-  /* ----------------Navbar end-----------------*/
-  
-  
-  
-  
-  
-  .flex-container {
-    border: 4px solid #FFE401;
-    background-color: #FFE401;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    width: 1200px;
-      margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .flex-child {
-    margin: 5px;
-    /*border: 2px solid; */
-    border-radius: 5px;
-    padding: 5px;
-    display: flex;
-  }
-  
-  
-  img {
-    width: 100px;
-    height: 100px;
-    align-items: flex-end;
-  }
-  
-  
-  
-  .big-news {
-    border: 4px solid white;
-    border-bottom: 4px solid #212529;
-    height: 330px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: white; 
-  }
-  
-  .inside-big {
-    margin: 5px;
-    /* border: 2px solid; */
-    border-radius: 5px;
-    padding: 5px;
-    width: 600px;
-    height: 300px;
-    display: flex;
-  }
-  
-  .inside-big img {
-    width: 510px;
-    height: 300px;
-    border-radius: 25px;
-    box-shadow: 10px 5px 5px  #212529;
-  }
-  
-  .pic {
-    width: 45%;
-  }
-  
-  .text1 {
-    width: 60%;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .text2 {
-    width: 60%;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  
-  /*------ OTHER NEWS SECTION ------*/
+/*------ OTHER NEWS SECTION starts ------*/
   .other-news {
     border: 4px solid white;
     height: 500px;
@@ -176,7 +194,9 @@ body {
     margin-right: auto;
   }
   
-  /* ALLTING NEDANFÖR */
+  /* ALLTING NEDANFÖR är nytt, 
+  ska ta bort denna text/kommentar när 
+  jag ska rensa innan inlämning*/
 
   .one a {
     background: #ffffff;
@@ -264,18 +284,18 @@ body {
 
 
 
-   /* ALLTING OVANFÖR -------- */
-  .big-news a{
-    text-decoration: underline;
-    color: black;
-  }
+   /* ALLTING OVANFÖR --- */ 
+/*--- Other News section ends ---*/
+
+
   
-  a {
+  
+  /* a {
     text-decoration: underline;
     color: white;
-  }
+  } */ /*Denna verkar inte ha någon funktion längre */
   
-  /*------ FOOTER-----*/ 
+/*--- FOOTER starts here ---*/ 
   .footer {
     border: 4px solid rgb(184, 179, 179);
     height: 35px;
@@ -379,11 +399,9 @@ body {
       justify-content: flex-start;
     }
   
-    .navbar { /* Ny */
-      display: none;
-    }
-  
-  
+    /* .navbar { /* Ny */
+      /*display: none;
+    } */ /* Kan ta bort */
   
     .dropdown { 
       display: none;
@@ -391,7 +409,7 @@ body {
   
     /* a.home2, .one2, .two, .three {
       width: 52px;
-    }  */
+    }  */ /* Kan ta bort */
   
     a.home2, .politics, .sport, .culture {
       width: 112px;
