--- a/code/style.css
+++ b/code/style.css
@@ -8,14 +8,6 @@ footer {
   background: rgb(189, 189, 189);
   border: 1px solid black;
 }
-.title,
-.promo-1,
-.promo-2,
-.nav-links,
-.btn-side-nav {
-  background: rgb(170, 229, 170);
-  border: 1px solid black;
-}
 .large,
 .medium,
 .small-1,
@@ -55,10 +47,10 @@ footer {
 }
 /* End of DEBUG STYLES */
 
-/* Small Devices (Mobile) DEFAULT*/
+/* DEFAULT size - Mobile/Small Devices*/
 
-/* Main Grid Layout */
-/* GRID DISPLAYS */
+/* ------- LAYOUT (GRID&FLEX) ------- */
+
 body {
   display: grid;
   grid-template-columns: 1fr;
@@ -118,30 +110,98 @@ footer {
   gap: 10px 10px;
 }
 
-/* Flex boxes */
 .article-column {
   display: flex;
   flex-direction: column;
 }
+
 .article-list {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-/* GRID AREAS (with no further styling) */
+nav,
+header > figure {
+  display: none;
+}
+
+/* ------- ELEMENT STYLING ------- */
+
+/* FONTS & GENREAL STYLES */
+a {
+  font-family: "Oswald", sans-serif;
+  font-weight: 300;
+  text-decoration: none;
+  color: black;
+  font-size: 1.5em;
+}
+h1 {
+  font-family: "rieslingregular", Helvetica, sans-serif;
+  font-size: 8em;
+  font-weight: normal;
+  text-align: center;
+  margin: 0;
+}
+ul {
+  list-style: none;
+}
+
+/* HEADER */
+.btn-side-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5em;
+  grid-area: side-nav;
+}
+.title {
+  align-self: center;
+  grid-area: title;
+}
+
+/* FULLSCREEN SIDEBAR */
+.overlay {
+  display: none;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.overlay a {
+  padding: 8px;
+  font-size: 4em;
+  color: #818181;
+  display: flex;
+  justify-content: center;
+}
+
+.overlay a.closebtn {
+  justify-content: flex-end;
+  margin-right: 10%;
+  margin-top: 10%;
+}
+
+.overlay a:nth-child(3) {
+  padding-bottom: 1em;
+  margin: 0 20% 0 20%;
+  border-bottom: 2px solid;
+}
+.overlay a:nth-child(4) {
+  padding-top: 1em;
+}
+
+/* Declaration of GRID AREAS (with no further styling) */
 
 #news-list {
   grid-area: news-list;
 }
 #news-column {
   grid-area: news-column;
-}
-.nav-links {
-  grid-area: nav-links;
-}
-.title {
-  grid-area: title;
 }
 .promo-1 {
   grid-area: promo-1;
@@ -162,25 +222,15 @@ footer {
   grid-area: small-2;
 }
 
-.btn-side-nav {
-  grid-area: side-nav;
-}
-
-/* Hide nav links and promo imgs */
-nav,
-header > figure {
-  display: none;
-}
-
-/* Medium Devices (tablets) */
+/* ------- MEDIUM DEVICES ------- */
 @media (min-width: 768px) {
   body {
     width: 743px;
   }
 
   header {
-    grid-template-columns: 25% 1fr 25%;
-    grid-template-rows: repeat(2, 1fr);
+    grid-auto-columns: auto;
+    grid-template-rows: auto 60px;
     grid-template-areas:
       "promo-1 title promo-2"
       "nav-links nav-links nav-links";
@@ -212,17 +262,39 @@ header > figure {
   .btn-side-nav {
     display: none;
   }
-  nav,
-  header > figure {
-    display: inline-block;
+
+  /* STYLING ELEMENTS */
+
+  /* HEADER */
+  .promo-img {
+    display: flex;
+    align-items: center;
+  }
+  .promo-img img {
+    max-width: 100%;
+    height: auto;
+  }
+  .nav-links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    grid-area: nav-links;
+  }
+  #central-links {
+    display: flex;
+    padding: 0;
+  }
+  #central-links li {
+    margin-right: 20px;
   }
 }
 
-/* Large Devices (Desktops) */
+/* ------- LARGE DEVICES ------- */
 @media (min-width: 1200px) {
   body {
     grid-template-columns: 60% 1fr;
-    grid-template-rows: 300px 400px auto auto 200px;
+    grid-template-rows: auto 400px auto auto 200px;
     grid-template-areas:
       "header header"
       "hero hero"
