--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,144 @@
 html {
-  background: #0025ff;
+  /* background-color: #111;
+  color: #fff; */
+}
+
+body {
+  margin: 0;
+  /* box-sizing: border-box; */
+}
+
+/** HEADER **/
+
+
+.header {
+  height: 50px;
+  background-color: rgb(44, 44, 44);
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  justify-content: space-between;
+}
+
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  width: 30px;
+  height: 30px;
+  justify-content: space-around;
+  margin-right: 24px;
+}
+
+.top-heading {
   color: #fff;
+}
+
+.logo {
+  width: 50px;
+  /* display: none; */
+  margin-right: 30px;
+}
+
+.navigation-container {
+  display: flex;
+}
+
+.navigation-item {
+  margin-right: 10px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.navigation-item:nth-child(3) {
+  margin-right: 0;
+}
+
+.hamburger div {
+  background-color: #fff;
+  width: 30px;
+  height: 5px;
+  border-radius: 2px;
+}
+
+
+/** BIG NEWS **/
+
+
+.big-news {
+  display: flex;
+  box-sizing: border-box;
+}
+
+.news-card-big {
+  width: 100%;
+  height: 300px;
+  background: #999;
+  margin: 0 5px;
+}
+
+@media (max-width: 767px) {
+  .news-card-big {
+    background-color: lightblue;
+  }
+}
+
+@media (min-width: 768px) {
+  .big-news {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .news-card-big {
+    background-color: lightgreen);
+    width: 100%;
+  }
+}
+  @media (min-width: 992px) {
+    .news-card-big {
+    background-color: lightsalmon;
+    width: 100%;
+  }
+}
+
+
+/** OTHER-NEWS **/
+
+
+.other-news {
+  display: flex;
+  box-sizing: border-box;
+  flex-direction: column;
+}
+
+.news-card {
+  width: 100%; /*should take max width*/
+  height: 300px;
+  background: #999;
+  margin: 5px 5px 5px 5px;
+}
+
+@media (max-width: 767px) {
+  .news-card {
+    background-color: red;
+  }
+}
+
+@media (min-width: 768px) {
+  .other-news {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .news-card {
+    background-color: green;
+    width: 45%;
+  }
+}
+  @media (min-width: 992px) {
+    .news-card {
+    background-color: yellow;
+    width: 22.5%;
+  }
 }
