--- a/code/style.css
+++ b/code/style.css
@@ -34,7 +34,7 @@ html {
 
 .big-news-img img {
   width: 100%;
-  height: 450px;
+  height: 400px;
 }
 
 .big-news-text h1 {
@@ -85,7 +85,7 @@ html {
 
 .news-card img {
   width: 100%;
-  height: 350px;
+  height: 300px;
 }
 
 /* IF SCREEN SIZE IS MORE THAN 768PX WIDE - TABLET */
@@ -150,4 +150,10 @@ html {
 /* IF SCREEN SIZE IS MORE THAN 1024PX WIDE - DESKTOP */
 @media screen and (min-width: 1024px) {
 
+  .news-card-container {
+    flex-wrap: nowrap;
+  }
+  .news-card {
+    margin: 17px 10px;
+  }
 }
