--- a/test.css
+++ b/test.css
@@ -13,7 +13,7 @@ body {
     align-items: flex-end;
     justify-content: flex-end;
     width: 1200px;
-      margin-left: auto;
+    margin-left: auto;
     margin-right: auto;
   }
   
@@ -30,6 +30,10 @@ body {
     width: 100px;
     height: 100px;
     align-items: flex-end;
+  }
+
+  .white {
+    width: 50%;
   }
   
   
@@ -62,6 +66,13 @@ body {
   
     /*---Navbar ends here ---*/
   
+    a.home2, .politics, .sport, .culture {
+        width: 112px;
+        height: 50px;
+        font-size: 28px;
+        padding:28px 16px 0 16px ;
+        font-weight: bold;
+      }
   
   /* --- Flex Container section ends here --*/
 
@@ -115,6 +126,7 @@ body {
     width: 60%;
     align-items: center;
     justify-content: center;
+    font-size: 22px;
   }
   
   .text2 {
@@ -172,7 +184,7 @@ body {
 /*------ OTHER NEWS SECTION starts ------*/
   .other-news {
     border: 4px solid white;
-    height: 500px;
+    height: 400px;
     display: grid; /* test */
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 5px;
@@ -371,33 +383,33 @@ body {
   
   
   
-  /*-------- Desktop --------------*/
-  @media (min-width: 1025px) /* Desktop */ {
-    .text1 {
-      width: 60%;
+  /*-------- Devices --------------*/
+
+  /* Big Desktop */
+  @media (min-width: 1025px)  {
+    /* .text1 {
+      /*width: 60%;
       align-items: center;
-      justify-content: center;
-      font-size: 22px;
-    }
+      justify-content: center; Finns redan ovan, kan ta bort*/
+      /* font-size: 22px; 
+    } Kan ta bort hela, allt detta finns redan ovan*/
   
-  
-    
     .text2 {
       display: none;
     } 
   
-    .other-news {
+    /*.other-news {
       height:400px;
-    }
+    } Kan ta bort denna, finns redan ovan */ 
   
     .ul1 {
       display: none;
   
     }
   
-    .flex-container {
+    /* .flex-container {
       justify-content: flex-start;
-    }
+    } ser itne ut att behövas, kan ta bort */
   
     /* .navbar { /* Ny */
       /*display: none;
@@ -411,238 +423,43 @@ body {
       width: 52px;
     }  */ /* Kan ta bort */
   
-    a.home2, .politics, .sport, .culture {
+    /*a.home2, .politics, .sport, .culture {
       width: 112px;
       height: 50px;
       font-size: 28px;
       padding:28px 16px 0 16px ;
       font-weight: bold;
-    }
+    } Kan ta bort, finns redan ovan*/
   
-    .white {
-      width: 50%;
-    }
-  
-  
+    /* .white {
+        width: 50%;
+      } Kan ta bort, finns redan ovan */
   
   }
-  
-  @media (min-width: 667px) and (max-width: 1024px){
-    /* Tablet */
-    .flex-container {
-      height:100px;
-      justify-content: center;
-    }
-  
-    .flex-container .white {
-      height: 300px;
-      align-items:flex-end;
-      justify-content:center;
-      width: 40%;
-    }
-  
-    .home2, .politics {
-      display: none;
-    }
-  
-    a.home1, .politics1, .sport, .culture {
-      width: 174px;
-      height: 50px;
-      padding: 0;
-      justify-content:flex-end; 
-      font-size: 36px;
-      font-weight: bold;
-    }
-    
-    
-    .other-news {
-      height: 1200px; /* Vet ej varför jag har denna */
-    }
-    
-    .other-news .flex-child  {
-      width: 570px;
-      height: 270px;
-      grid-column:span 2; /* the one making difference */
-  
-    }
-  
+
+  /* Small Desktop */
+  @media (min-width: 992px) and (max-width: 1024px)  {
     .text2 {
-      display: none;
-    }
-  
-    .blue {
-      display: none;
-    }
-  
-    .orange {
-      display: none;
-    }
-  
-    img {
-      width: 200px;
-      height: 90px;
-    }
-  
-  
-    .dropdown { 
-      display: none;
-    } 
-  
-    .text {
-      font-size: 40px;
-      font-weight: bold;
-    }
-  
-    .text1 {
-      font-size: 24px;
-    }
-  
-  }
-  
-  
-  
-  
-  
-  
-  /* Mobile */ 
-  @media screen and (max-width: 667px) {
+        display: none;
+      } 
     
-    body {
-      background-color: white;
-    }
-  
-    .ul1, .ul2 {
-      display: none;
-    }
-  
-    img.dropdown-pic {
-      width: 200px;
-      height: 200px;
-    }
+      .ul1 {
+        display: none;
     
-    .flex-container {
-      align-items:flex-start;
-      justify-content: left;
-      width: 1200px;
-    }
-    .flex-container .white img {
-      width: 400px; 
-      height: 200px;
-    }
-  
-    .flex-container .white {
-      /*width: 400px; */
-      width: 80%; }
-  
-    
-    
-  
-    .big-news {
-      height: 530px;
-      width: 1200px;
-    }
-  
-    .inside-big {
-      height: 500px;
-    }
-  
-  
-  
-  
-  
-    
-  
-    .other-news {
-      /* DU KAN LÄGGA EN DISPLAY:GRID; HÄR, SPELAR INGEN ROLL IFALL DU GÖR DET MEN BARA FÖR ATT LRÄAREN SKA SE ATT DU HAR */
-      grid-template-columns: none;
-      grid-gap: none;
-      flex-wrap: nowrap;
-      width: 1200px;
-      height: 3670px;
-      display: block;
-      justify-content: space-evenly;
-  
-    }
-  
-    
-  
-  
-  
-  
-  
-  
-  
-  
-  
-   
-  
-    .other-news .flex-child {
-      width: 1200px;
-      height: 500px;
-      grid-gap: 10px;
-    }
-  
-    .flex-child .one {
-      width: 1200px;
-    }
-  
-    .big-news {
-      height: 600px;
-      display: table-row;
-      justify-content:center;
-      text-align: center;
-      width: 1200px;
-    }
-  
-    .inside-big {
-      width: 1200px;
-      height: 600px;
-    }
-  
-    .inside-big img {
-      width: 100%;
-      height: 600px;
-      box-shadow: 5px 25px 5px  #212529;
-    }
-  
-  
-    .inside-big .pic {
-      width: 1200px;
-    }
-  
-    .text2 /* Only visible on mobile Device */ {
-      width: 1200px;
-      align-items: center;
-      justify-content: center;
-      height: 100px;
-      font-size: 36px;
-      font-weight: bold;
       }
-  
     
-    .text1 /*Not visible on Mobile Device */ {
-      display: none;
-    } 
-  
-    .text {
-      font-size: 75px;
-      font-weight: bold;
-    }
-  
-    .latest {
-      font-size: 28px;
-      width: 1200px;
-      height: 100px;
-    }
-  
-    .overlay {
-      width: 1200px;
-    }
+      .dropdown { 
+        display: none;
+      } 
     
-    .footer {
-      font-size: 28px;
-      height: 70px;
-      align-items: center;
     }
-  
+
+
+  /* Tablet */
+  @media (min-width: 768px) and (max-width: 992px) {
+
+
+
+
+
   }
