--- a/code/style.css
+++ b/code/style.css
@@ -389,6 +389,13 @@ p:hover {
   height: 100vh;
 }
 
+.simple-header {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  background:rgba(0, 0, 0, 0.575);
+}
+
 /* styling of the sign-up form */
 .signup-form {
   display: flex;
