--- a/test.css
+++ b/test.css
@@ -66,7 +66,7 @@ body {
   
     /*---Navbar ends here ---*/
   
-    a.home2, .politics, .sport, .culture {
+    a.home1, .politics1, .home2, .politics, .sport, .culture {
         width: 112px;
         height: 50px;
         font-size: 28px;
@@ -456,10 +456,55 @@ body {
 
 
   /* Tablet */
-  @media (min-width: 768px) and (max-width: 992px) {
+@media (min-width: 768px) and (max-width: 992px) {
+    .text2 {
+        display: none;
+      } 
+    
+      .flex-container {
+          justify-content: center;
+      }
 
+      a.home1, .politics1, .sport, .culture {
+          font-size: 50px;
+          width: 155px;
+      }
 
+      .home2, .politics {
+        display: none;
+      }
 
+    
+      .dropdown { 
+        display: none;
+      } 
 
+      .white {
+          display: flex;
+          justify-content: center;
+          width: 35%;
+          align-items: center;
+      }
+
+    .white img {
+        width: 150px;
+        height: 150px;
+    }
+
+    .other-news {
+        display: flex;
+        height: 1050px;
+       
+    }
+    .one {
+        display: flex;
+        width: 49%;
+        justify-content: center;
+    }
+
+    .one img {
+        width: 550px;
+        height: 200px;
+    }
 
   }
